# Physic-Induced-Neural-Operator-Replication

./: ldc.py  main.py  pyproject.toml
.zed/: settings.json
notebooks/: FNO_test.ipynb  analyze_dataset.ipynb  dataset_check.ipynb  ldc.ipynb  out.webm
notebooks/.ipynb_checkpoints/: FNO_test-checkpoint.ipynb  analyze_dataset-checkpoint.ipynb  dataset_check-checkpoint.ipynb  dataset_loader-checkpoint.py  ldc-checkpoint.ipynb  out-checkpoint.webm
