[project]
name = "pino"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "lab>=8.9",
    "napari[all,pyqt5]>=0.6.6",
    "pyqt6>=6.10.2",
    "s3fs>=2026.2.0",
    "torch>=2.10.0",
    "trackio>=0.18.0",
    "zarr>=3.1.5",
]
